cambios en el registro.html

--- a/registro.html
+++ b/registro.html
@@ -28,18 +28,22 @@
           <div class="col-md-6">
             <form>
               <div class="form-group">
-                <label for="name">Nombre</label>
-                <input type="text" class="form-control form-control-sm" id="name" placeholder="Nombre">
+                <label for="input_Name">Nombre</label>
+                <input type="text" class="form-control form-control-sm" id="input_Name" placeholder="Nombre">
               </div>
               <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control form-control-sm" id="email" placeholder="Email">
+                <label for="input_Email">Email</label>
+                <input type="email" class="form-control form-control-sm" id="input_Email" placeholder="Email">
               </div>
               <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" class="form-control form-control-sm" id="password" placeholder="Contraseña">
+                <label for="input_Password">Contraseña</label>
+                <input type="password" class="form-control form-control-sm" id="input_Password" placeholder="Contraseña">
               </div>
-              <button type="submit" class="btn btn-primary btn-sm">Enviar</button>
+              <div class="mb-4">
+                <label for="input_Monto" class="form-label">Monto Inicial</label>
+                <input type="text" class="form-control form-control-sm" id="input_Monto">
+              </div>
+              <button type="submit" class="btn btn-primary btn-sm" id="btn_Registrar">Enviar</button>
             </form>
           </div>
         </div>
